[gd_scene load_steps=9 format=3 uid="uid://bhyjlj642hnra"]

[ext_resource type="Script" path="res://engine/game/GameScene.gd" id="1"]
[ext_resource type="Script" path="res://engine/game/GameCreator.gd" id="2"]
[ext_resource type="Script" path="res://engine/game/PlayerManager.gd" id="3"]
[ext_resource type="PackedScene" path="res://engine/agent/PlayerAgent.tscn" id="4"]
[ext_resource type="Script" path="res://engine/game/GameCommands.gd" id="5"]
[ext_resource type="Script" path="res://engine/game/PlayerPause.gd" id="6"]
[ext_resource type="Script" path="res://engine/game/GUI.gd" id="7"]
[ext_resource type="Script" path="res://engine/game/LogLabel.gd" id="8"]

[node name="GameScene" type="Node"]
script = ExtResource("1")

[node name="GameCreator" type="Node" parent="."]
script = ExtResource("2")

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("3")

[node name="PlayerAgent" parent="PlayerManager" instance=ExtResource("4")]

[node name="Commands" type="Node" parent="."]
script = ExtResource("5")

[node name="Pause" type="CanvasLayer" parent="."]
layer = 10

[node name="PlayerPause" type="Control" parent="Pause"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("6")

[node name="ColorRect" type="ColorRect" parent="Pause/PlayerPause"]
modulate = Color(0.172549, 0.113725, 0.223529, 0.352941)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Pause/PlayerPause"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -15.5
offset_right = 25.5
offset_bottom = 15.5
text = "PAUSED
"

[node name="GUI" type="CanvasLayer" parent="."]
process_mode = 3
layer = 20
script = ExtResource("7")

[node name="BottomPanel" type="Panel" parent="GUI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
offset_right = -120.0

[node name="LogLabel" type="Label" parent="GUI/BottomPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("8")

[node name="ReferenceRect" type="ReferenceRect" parent="GUI/BottomPanel/LogLabel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RightPanel" type="Panel" parent="GUI"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0

[node name="Label" type="Label" parent="GUI/RightPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.5
offset_right = -1.0
text = "
` - console
F4 - debug window
P - pause

You can select units with selection box or keys 1-4
"

[node name="ReferenceRect" type="ReferenceRect" parent="GUI/RightPanel/Label"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
